--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
-       // jcenter()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -28,7 +28,7 @@ sourceCompatibility = 1.8
 //각종 의존성(라이브러리)들을 어떤 원격 저장소에서 받을지 정합니다.
 repositories {
     mavenCentral()
-   // jcenter()
+    jcenter()
 }
 
 
@@ -39,8 +39,10 @@ testCompile, testImplementation:테스트 컴파일 과정에서 "
 testRuntime: 테스트 실행 과정에서 " */
 
 dependencies{
-    compileClasspath('org.springframework.boot:spring-boot-starter-web')
-    testCompileClasspath('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 //test {
 //    useJUnitPlatform()
