--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ testRuntime: 테스트 실행 과정에서 " */
 dependencies{
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-jpa')
+    compile('com.h2database:h2')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
